# omoknuni_quantum

./: .coverage  .coverage.cosmosapjw.2407254.XYwGyShx  .coverage.cosmosapjw.64439.XACcpOFx  .gitignore  CLAUDE.md  CLEANUP_LOG.md  CMakeLists.txt  COMPREHENSIVE_MCTS_OPTIMIZATION_PLAN.md  LICENSE  MANIFEST.in  MCTS_REFACTORING_COMPLETE.md  MCTS_REFACTORING_PLAN.md  NOVEL_PHYSICS_RESEARCH.md  PROJECT_STRUCTURE.md  README.md  README_PHYSICS_ANALYSIS.md  STREAMLINING_PLAN.md  STREAMLINING_PROGRESS.md  arena_segfault_fix_summary.md  build_cpp.py  build_cuda.py  clean_build.sh  cuda_config.sh  example_game.json  monitor_gpu_performance.sh  pyproject.toml  pytest.ini  quantum_v2_benchmark_results.json  requirements.txt  run_gui.sh  run_mcts_physics_analysis.py  run_performance_optimization.sh  run_physics_analysis.sh  run_tests.sh  set_cuda_arch.sh  setup.cfg  setup.py  setup_env.sh  setup_environment.sh  test_arena_fix.py  (+2 more)
.claude/: settings.local.json
benchmark_results/: benchmark_results.json
configs/: OPTIMIZATION_GUIDE.md  TRAINING_TIME_ESTIMATES.md  chess_classical.yaml  chess_ryzen9_3060ti.yaml  go_19x19_classical.yaml  go_19x19_quantum.yaml  go_19x19_ryzen9_3060ti.yaml  gomoku_12hour_amateur.yaml  gomoku_classical.yaml  gomoku_diverse_training.yaml  gomoku_hybrid_training.yaml  gomoku_improved_training.yaml  gomoku_one_loop.yaml  gomoku_production.yaml  gomoku_stabilized_training.yaml  gomoku_stable_training.yaml  gomoku_test.yaml  gomoku_tournament.yaml  gomoku_tree_level.yaml  gomoku_with_data_cleanup.yaml  minimal_test.yaml  optimized_physics_analysis.yaml  optimized_selfplay.yaml  optuna_optimization_base.yaml  ryzen9_3060ti_optimized.yaml  test_cpu_backend.yaml  test_hybrid_vectorized.yaml  test_illegal_moves.yaml  test_stability.yaml
docs/: PRD.md  PROJECT_STRUCTURE.md  README.md  alphazero-training-guide.md  hardcoded-parameters-to-configure.md  migration-guide-v2.md  optimization_summary.md  performance-optimization.md  qft-mcts-guide.md  quantum-parameters-explained.md  quantum-theory-foundations.md  quantum-v1-to-v2-migration.md  resume-training-guide.md
docs/archive/: DISCRETE_QUANTUM_MCTS_FORMALISM.md
docs/cpu/: CPU_BACKEND_DESIGN.md
docs/quantum_physics/: PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHYSICS_ANALYSIS_USER_GUIDE.md  QUANTUM_PHENOMENA_ANALYSIS_GUIDE.md  README.md  STATISTICAL_MECHANICS_ANALYSIS_GUIDE.md
docs/v1.0/: MCTS_QUANTUM_PATH_INTEGRAL_FORMALISM.md  quantum-mcts-complete-guide.md
docs/v2.0/: implementation-summary.md  qft-mcts-math-foundations-v2.md  quantum-mcts-guide-v2.md  quantum-mcts-new.md  quantum-theory-foundations-v2.md  quantum_v2_optimization_summary.md
docs/v3.0/: implementation-guide.md  quantum-mcts-guide.md
docs/v4.0/: quantum_mcts.md
experiments/default/: config.yaml
experiments/gomoku_classical/: config.yaml
experiments/gomoku_master/: config.yaml
experiments/gomoku_test/: config.yaml
gomoku_classical/: config.yaml
include/core/: game_state_pool.h  igamestate.h
include/utils/: attack_defense_module.h  gpu_attack_defense_module.h
mcts_quantum_profiling_results/: cprofile_classical_wave3072_sims1000.txt  cprofile_classical_wave3072_sims10000.txt  cprofile_classical_wave3072_sims25000.txt  cprofile_classical_wave3072_sims5000.txt  cprofile_classical_wave3072_sims50000.txt  cprofile_one_loop_wave3072_sims1000.txt  cprofile_one_loop_wave3072_sims10000.txt  cprofile_one_loop_wave3072_sims25000.txt  cprofile_one_loop_wave3072_sims5000.txt  cprofile_one_loop_wave3072_sims50000.txt  cprofile_tree_level_wave3072_sims1000.txt  cprofile_tree_level_wave3072_sims10000.txt  cprofile_tree_level_wave3072_sims25000.txt  cprofile_tree_level_wave3072_sims5000.txt  cprofile_tree_level_wave3072_sims50000.txt  quantum_comparison.csv  quantum_detailed_results.json
python/: .coverage  .coverage.cosmosapjw.63812.XcOXDRnx  QUANTUM_MCTS_COMPLETION_REPORT.md  analyze_collected_mcts_data.py  analyze_profiling_results.py  analyze_quantum_results.py  benchmark_final.py  benchmark_mcts_profiler.py  benchmark_mcts_refactor.py  benchmark_qft_mcts.py  benchmark_quantum_mcts.py  benchmark_quantum_performance.py  benchmark_results.txt  benchmark_results_final.txt  benchmark_simple.py  build_cuda_kernels.py  check_available_kernels.py  check_cuda_kernel.py  check_kernel_usage.py  clear_tensorrt_cache.py  compile_cuda_kernels.py  compile_kernels.py  comprehensive_benchmark.py  comprehensive_mcts_profiler.py  debug_performance.py  debug_timing_profiler.py  demo_profiler_features.py  demonstrate_quantum_integration.py  diagnose_mcts_performance.py  example_self_play.py  final_quantum_demonstration.py  final_system_validation.py  fix_all_dtypes.py  fix_game_states.py  focused_search_profiler.py  mcts_comprehensive_profiler.py  mcts_performance_demo.py  mcts_performance_profiler.py  mcts_selfplay_example.py  minimal_mcts_test.py  (+81 more)
python/alphazero_omoknuni.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/benchmark_results/: benchmark_results.json
python/benchmarks/: benchmark_quantum_v2.py  fix_quantum_v2_performance.py  profile_quantum_v2.py  test_mcts_performance.py
python/build_cuda/: .ninja_deps  .ninja_log  build.ninja  wrapper.cpp
python/examples/: neural_network_input_demo.py  optimized_mcts_demo.py  quantum_mcts_demo.py  quantum_mcts_v2_demo.py  resnet_mcts_demo.py  simple_mcts_demo.py  train_gomoku.py  unified_training_example.py
python/gomoku_classical/: config.yaml
python/gomoku_classical_optimized/: config.yaml
python/gomoku_one_loop_quantum/: config.yaml
python/gui/: gomoku_gui.py
python/mcts/: OPTIMIZED_MCTS_GUIDE.md  README.md  __init__.py  config.py  cuda_setup.py
tests/: test_all_configs.py  test_cleanup.py  test_config_validation.py  test_dirichlet_noise_integration.py  test_item_call_optimization.py  test_mcts_tree_expansion.py  test_new_physics_modules_import.py  test_optimization_benchmark.py  test_quantum_csr_config.py  test_quantum_physics_comprehensive.py  test_self_play_value_extraction.py  test_virtual_loss_optimization.py  test_wave_search_bug.py
(+567 files in other folders)
